feat: configurazione hero

--- a/index.html
+++ b/index.html
@@ -26,14 +26,22 @@
                     <li><a href="">Supporto</a></li>
                     <li><a href="">Contatta l'ufficio vendite</a></li>
                     <li><a href="">Accedi</a></li>
-                    <li ><a class="button-blue text-white" href="">Inizia</a></li>
+                    <li><a class="button-blue text-white" href="">Inizia</a></li>
                 </ul>
             </div>
         </div>
 
     </header>
     <main>
-        
+        <section class="min-h bg-light-blue ">
+            <div class="flex warp container">
+                <div class="width-100">TITOLO</div>
+                <div>TESTO</div>
+                <div>IMAGINE</div>
+            </div>
+
+        </section>
+
     </main>
 
 
