feat: seconda sezione quasi completa

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <img class="img-logo" src="./img/logo-small.png" alt="">
         </div>
-        <div class="flex jc-content width-100 aitems-center">
+        <div class="flex jc-content-between width-100 aitems-center">
             <div class="">
                 <ul class="flex">
                     <li><a href="">Perche Dropbox</a></li>
@@ -33,14 +33,41 @@
 
     </header>
     <main>
+        <!-- hero section -->
         <section class="min-h bg-light-blue ">
-            <div class="flex warp container">
-                <div class="width-100">TITOLO</div>
-                <div>TESTO</div>
-                <div>IMAGINE</div>
+            <div class="flex warp container paddin-top-100 ">
+                <div class="width-100 min-h1 border">TITOLO</div>
+                <div class="width-40 min-h1 border">TESTO</div>
+                <div class="width-60 min-h1 border">IMAGINE</div>
             </div>
 
         </section>
+        <!-- fine hero section -->
+        <!-- inizio zona colle verticali -->
+        <section class="container padding-top-50 min-h">
+            <h2 class="font-size-4rem"> Trova il tuo piano business che fa per te </h2>
+            <div class="radio-group flex gap-80 padding-top-50">
+                <div>
+                    <input type="radio" id="fatturazione-mensile">
+                    <label for="fatturazione-mensile">Fatturazione mensile</label>
+                </div>
+                <div>
+                    <input type="radio" id="fatturazione-annuale">
+                    <label for="fatturazione-annuale">Fatturazione annuale</label>
+                </div>
+            </div>
+            <div class=" flex padding-top-50 min-h1 jc-content-between">
+                <div class="border width-30 ">
+                    <span>singolo</span>
+                </div>
+                <div class="border width-30">collona2</div>
+                <div class="border width-30">collona3</div>
+
+            </div>
+
+        </section>
+        <!-- fine zona colle verticali -->
+
 
     </main>
 
