feat: sezione con immagine completa

--- a/index.html
+++ b/index.html
@@ -56,17 +56,48 @@
                     <label for="fatturazione-annuale">Fatturazione annuale</label>
                 </div>
             </div>
-            <div class=" flex padding-top-50 min-h1 jc-content-between">
+            <div class=" flex warp gap-20 padding-top-50 min-h2 jc-content-between">
                 <div class="border width-30 ">
-                    <span>singolo</span>
+                    <span class="flex jc-content-center padding-10">singolo</span>
+                    <div class="column">
+                        <h4>prova</h4>
+
+                    </div>
                 </div>
-                <div class="border width-30">collona2</div>
-                <div class="border width-30">collona3</div>
+                <div class="border width-30  ">
+                    <span class="flex jc-content-center padding-10">singolo</span>
+                    <div class="column">
+                        <h4>prova</h4>
+
+                    </div>
+                </div>
+                <div class="border width-30 ">
+                    <span class="flex jc-content-center padding-10">singolo</span>
+                    <div class="column">
+                        <h4>prova</h4>
+
+                    </div>
+                </div>
+                <div class="border width-100 ">
+                    <span class="flex jc-content-center padding-10">singolo</span>
+                </div>
 
             </div>
 
         </section>
         <!-- fine zona colle verticali -->
+        <!-- inizio zona con immagine e testo -->
+        <section class=" border">
+            <div class="container paddin-top-100 min-h jc-content-center aitems-center">
+                <div class="flex width-100 min-h1">
+                    <div class="img width-60">Immagine</div>
+                    <div class="width-40">Testo</div>
+                </div>
+            </div>
+
+        </section>
+        <!-- inizio zona con immagine e testo -->
+
 
 
     </main>
