feat: griglia finita

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- fine hero section -->
         <!-- inizio zona colle verticali -->
         <section class="container padding-top-50 min-h">
-            <h2 class="font-size-4rem"> Trova il tuo piano business che fa per te </h2>
+            <h2 class="font-size-2-4rem"> Trova il tuo piano business che fa per te </h2>
             <div class="radio-group flex gap-80 padding-top-50">
                 <div>
                     <input type="radio" id="fatturazione-mensile">
@@ -88,15 +88,34 @@
         <!-- fine zona colle verticali -->
         <!-- inizio zona con immagine e testo -->
         <section class=" border">
-            <div class="container paddin-top-100 min-h jc-content-center aitems-center">
+            <div class=" flex container  min-h jc-content-center aitems-center">
                 <div class="flex width-100 min-h1">
-                    <div class="img width-60">Immagine</div>
+                    <div class="img width-60 border">Immagine</div>
                     <div class="width-40">Testo</div>
                 </div>
             </div>
 
         </section>
-        <!-- inizio zona con immagine e testo -->
+        <!-- fine zona con immagine e testo -->
+        <!-- inizio zona con tabella -->
+        <section class="border min-h">
+            <div class="container warp gap-20  jc-content-between">
+                <div class="">
+                    <h2 class="font-size-2-4rem"> Esegui più operazioni con Drupbox Business</h2>
+                </div>
+                <div class="flex warp gap-20 padding-top-50 min-h2 width-100 jc-content-between">
+                    <div class="border width-30">1</div>
+                    <div class="border width-30">2</div>
+                    <div class="border width-30">3</div>
+                    <div class="border width-30">4</div>
+                    <div class="border width-30">5</div>
+                    <div class="border width-30">6</div>
+                </div>
+            </div>
+
+        </section>
+        <!-- fine zona con tabella -->
+
 
 
 
