feat: priam schermata completata

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 
 <body>
@@ -22,11 +23,11 @@
                 </ul>
             </div>
             <div class="flex">
-                <ul class="flex">
+                <ul class="flex aitems-center">
                     <li><a href="">Supporto</a></li>
                     <li><a href="">Contatta l'ufficio vendite</a></li>
                     <li><a href="">Accedi</a></li>
-                    <li><a class="button-blue text-white" href="">Inizia</a></li>
+                    <li><a class="button-blue " href="">Inizia</a></li>
                 </ul>
             </div>
         </div>
@@ -34,11 +35,20 @@
     </header>
     <main>
         <!-- hero section -->
-        <section class="min-h bg-light-blue ">
+        <section class=" bg-light-blue ">
             <div class="flex warp container paddin-top-100 ">
-                <div class="width-100 min-h1 border">TITOLO</div>
-                <div class="width-40 min-h1 border">TESTO</div>
-                <div class="width-60 min-h1 border">IMAGINE</div>
+                <h1 class="width-100 font-size-big ">Tutto ciò che ti serve per il lavoro, in un posto unico</h1>
+                <div class="width-40 padding-top-50  ">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e <br>collaboratori
+                        sono
+                        accessibili dallo stesso posto. <br>Dropbox Business è piu più di uno spazio di archiviazione
+                        sicuro: è un modo intelligente e <br> integrato per ottimizare il flusso di lavoro esistente.
+                    </p>
+                    <a class="button-blue margin-top" href="">Inizia la tua prova gratuita </a>
+                    <p class="padding-top-50">Annula in qualsiesi momento</p>
+                    <div><i class="fa-solid fa-arrow-down font-size-2-4rem paddin-top-100"></i> </div>
+                </div>
+                <img class="width-60 padding-top-50" src="./img/jumbo.png" alt="">
             </div>
 
         </section>
@@ -103,13 +113,21 @@
                 <div class="">
                     <h2 class="font-size-2-4rem"> Esegui più operazioni con Drupbox Business</h2>
                 </div>
-                <div class="flex warp gap-20 padding-top-50 min-h2 width-100 jc-content-between">
+                <div class="flex warp gap-20 padding-top-50 min-h1 width-100 jc-content-between">
                     <div class="border width-30">1</div>
                     <div class="border width-30">2</div>
                     <div class="border width-30">3</div>
                     <div class="border width-30">4</div>
                     <div class="border width-30">5</div>
                     <div class="border width-30">6</div>
+                </div>
+                <div class="font-size-2-4rem paddin-top-100">
+                    <h2> Piu di 500.000 teamuttilizzano <br>Dropbox Business</h2>
+                </div>
+                <div class="paddin-top-100">
+                    <a class="blue paddin-top-100" href="">
+                        Scopri di piu sui nostri clienti
+                    </a>
                 </div>
             </div>
 
@@ -120,6 +138,20 @@
 
 
     </main>
+    <!-- inizio footer -->
+    <footer class=" bg-black">
+        <div class="container-hero-footer paddin-top-100">
+            <div class="flex width-100">
+                <div class="col-20"></div>
+                <div class="col-20"></div>
+                <div class="col-20"></div>
+                <div class="col-20"></div>
+                <div class="col-20"></div>
+
+            </div>
+        </div>
+
+    </footer>
 
 
 </body>
