feat: conclucsa parte delle colenne verticali

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
         <!-- fine hero section -->
         <!-- inizio zona colle verticali -->
-        <section class="container padding-top-50 min-h">
+        <section class="container padding-top-50 ">
             <h2 class="font-size-2-4rem"> Trova il tuo piano business che fa per te </h2>
             <div class="radio-group flex gap-80 padding-top-50">
                 <div>
@@ -66,30 +66,143 @@
                     <label for="fatturazione-annuale">Fatturazione annuale</label>
                 </div>
             </div>
-            <div class=" flex warp gap-20 padding-top-50 min-h2 jc-content-between">
+            <div class=" flex warp gap-20 padding-top-50  jc-content-between ">
                 <div class="border width-30 ">
-                    <span class="flex jc-content-center padding-10">singolo</span>
-                    <div class="column">
-                        <h4>prova</h4>
+                    <span class="flex jc-content-center padding-10 border-bottom "><i
+                            class="fa-solid fa-user"></i>Singolo</span>
+                    <div class="column padding-top-30 ">
+                        <h2>Professional</h2>
+                        <p class="padding-10"><strong>12,00</strong></p>
+                        <p class="padding-10">/mese</p>
+                        <ul class="lista-funzionalita">
+                            <li>
+                                <span class="icona-utente"><i class="fa-solid fa-user"></i></span>
+                                1 utente
+                            </li>
+                            <li>
+                                <span class="icona-spazio"> <i class="fa-solid fa-folder"></i></span>
+                                5 TB di spazio di archiviazione sicuro
+                            </li>
+                            <li>
+                                <span class="icona-condivisione"><i class="fa-solid fa-share-nodes"></i></span>
+                                Funzioni di produttività premium e condivisione file semplice e sicura
+                            </li>
+                        </ul>
+                        <a class="margin-top width-100 text-center button-blue" href="">Prova gratis per 30 giorni</a>
+                        <div class=" margin-top "><span class="border-botton-black">oppure</span> <a href=""></a><u
+                                class="shopnow">acquista ora</u></div>
+                        <div class="margin-top-100 margin-bottom">
+                            <h3>Punti salienti del piano</h3>
+                            <ul class="lista-funzionalita ">
+                                <li><span class="icona-spazio"><i class="fa-solid fa-chevron-down blue"></i></span>
+                                    Invia file fino a 100 GB con Dropbox Trasfer</li>
+                                <li>
+                                    <span class="icona-spazio"><i class="fa-solid fa-chevron-down blue"></i></span>
+                                    Invia file fino a 100 GB con Dropbox Trasfer
+                                </li>
+                            </ul>
+                        </div>
 
-                    </div>
-                </div>
-                <div class="border width-30  ">
-                    <span class="flex jc-content-center padding-10">singolo</span>
-                    <div class="column">
-                        <h4>prova</h4>
+
 
                     </div>
                 </div>
                 <div class="border width-30 ">
-                    <span class="flex jc-content-center padding-10">singolo</span>
-                    <div class="column">
-                        <h4>prova</h4>
+                    <span class="flex jc-content-center padding-10 border-bottom "><i
+                            class="fa-solid fa-user"></i>Singolo</span>
+                    <div class="column padding-top-30 ">
+                        <h2>Professional</h2>
+                        <p class="padding-10"><strong>12,00</strong></p>
+                        <p class="padding-10">/mese</p>
+                        <ul class="lista-funzionalita">
+                            <li>
+                                <span class="icona-utente"><i class="fa-solid fa-user"></i></span>
+                                1 utente
+                            </li>
+                            <li>
+                                <span class="icona-spazio"> <i class="fa-solid fa-folder"></i></span>
+                                5 TB di spazio di archiviazione sicuro
+                            </li>
+                            <li>
+                                <span class="icona-condivisione"><i class="fa-solid fa-share-nodes"></i></span>
+                                Funzioni di produttività premium e condivisione file semplice e sicura
+                            </li>
+                        </ul>
+                        <a class="margin-top width-100 text-center button-blue" href="">Prova gratis per 30 giorni</a>
+                        <div class=" margin-top "><span class="border-botton-black">oppure</span> <a href=""></a><u
+                                class="shopnow">acquista ora</u></div>
+                        <div class="margin-top-100 margin-bottom">
+                            <h3>Punti salienti del piano</h3>
+                            <ul class="lista-funzionalita ">
+                                <li><span class="icona-spazio"><i class="fa-solid fa-chevron-down blue"></i></span>
+                                    Invia file fino a 100 GB con Dropbox Trasfer</li>
+                                <li>
+                                    <span class="icona-spazio"><i class="fa-solid fa-chevron-down blue"></i></span>
+                                    Invia file fino a 100 GB con Dropbox Trasfer
+                                </li>
+                            </ul>
+                        </div>
+
+
 
                     </div>
                 </div>
-                <div class="border width-100 ">
-                    <span class="flex jc-content-center padding-10">singolo</span>
+                <div class="border width-30 ">
+                    <span class="flex jc-content-center padding-10 border-bottom "><i
+                            class="fa-solid fa-user"></i>Singolo</span>
+                    <div class="column padding-top-30 ">
+                        <h2>Professional</h2>
+                        <p class="padding-10"><strong>12,00</strong></p>
+                        <p class="padding-10">/mese</p>
+                        <ul class="lista-funzionalita">
+                            <li>
+                                <span class="icona-utente"><i class="fa-solid fa-user"></i></span>
+                                1 utente
+                            </li>
+                            <li>
+                                <span class="icona-spazio"> <i class="fa-solid fa-folder"></i></span>
+                                5 TB di spazio di archiviazione sicuro
+                            </li>
+                            <li>
+                                <span class="icona-condivisione"><i class="fa-solid fa-share-nodes"></i></span>
+                                Funzioni di produttività premium e condivisione file semplice e sicura
+                            </li>
+                        </ul>
+                        <a class="margin-top width-100 text-center button-blue" href="">Prova gratis per 30 giorni</a>
+                        <div class=" margin-top "><span class="border-botton-black">oppure</span> <a href=""></a><u
+                                class="shopnow">acquista ora</u></div>
+                        <div class="margin-top-100 margin-bottom">
+                            <h3>Punti salienti del piano</h3>
+                            <ul class="lista-funzionalita ">
+                                <li><span class="icona-spazio"><i class="fa-solid fa-chevron-down blue"></i></span>
+                                    Invia file fino a 100 GB con Dropbox Trasfer</li>
+                                <li>
+                                    <span class="icona-spazio"><i class="fa-solid fa-chevron-down blue"></i></span>
+                                    Invia file fino a 100 GB con Dropbox Trasfer
+                                </li>
+                            </ul>
+                        </div>
+
+
+
+                    </div>
+                </div>
+                <div class="border width-100 margin-bottom ">
+                    <span class="flex jc-content-center padding-10 border-bottom w"> <i
+                            class="fa-solid fa-hotel"></i>Team</span>
+                    <div class="">
+                        <div class="flex jc-content-between padding-top-50 ">
+                            <div class="paddin-left">
+                                <h2> Enterprice</h2>
+                                <h3>Contatta l'ufficio ventite per i prezzi</h3>
+                            </div>
+                            <div> <a class="button-blue" href=""> Contatta l'ufficio vendite</a></div>
+                        </div>
+                        <div class="paddin-left padding-top-50 margin-bottom">
+                            <p> Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su <br>qualsiesi scala </p>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
