feat: conclusa zona con immagine e testo

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
                             <div> <a class="button-blue" href=""> Contatta l'ufficio vendite</a></div>
                         </div>
                         <div class="paddin-left padding-top-50 margin-bottom">
-                            <p> Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su <br>qualsiesi scala </p>
+                            <p> Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella
+                                gestione su <br>qualsiesi scala </p>
                         </div>
                     </div>
 
@@ -211,12 +212,19 @@
         <!-- fine zona colle verticali -->
         <!-- inizio zona con immagine e testo -->
         <section class=" border">
-            <div class=" flex container  min-h jc-content-center aitems-center">
+            <div class="margin-top-100 margin-bottom flex container jc-content-center aitems-center">
                 <div class="flex width-100 min-h1">
-                    <div class="img width-60 border">Immagine</div>
-                    <div class="width-40">Testo</div>
+                    <img class="width-60" src="./img/partner.png" alt="">
+                    <div class="width-40">
+                        <div class="column">
+                            <h2 class="padding-top-30">Entra in contatto con un <br> partner Dropbox</h2>
+                            <p class="padding-top-10">Trova un partner Dropbox e HelloSing <br> di fiduccia. ottieni le
+                                soluzioni e i servizi <br> necessari per raggiungere i tuoi obbiettivi <br> aziendali,
+                                tra cui implementazione, <br> integrazione, gestione e supporto <br> continui
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
         </section>
         <!-- fine zona con immagine e testo -->
