feat: main finito

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </section>
         <!-- fine zona colle verticali -->
         <!-- inizio zona con immagine e testo -->
-        <section class=" border">
+        <section class=" ">
             <div class="margin-top-100 margin-bottom flex container jc-content-center aitems-center">
                 <div class="flex width-100 min-h1">
                     <img class="width-60" src="./img/partner.png" alt="">
@@ -229,23 +229,47 @@
         </section>
         <!-- fine zona con immagine e testo -->
         <!-- inizio zona con tabella -->
-        <section class="border min-h">
+        <section class="">
             <div class="container warp gap-20  jc-content-between">
                 <div class="">
                     <h2 class="font-size-2-4rem"> Esegui più operazioni con Drupbox Business</h2>
                 </div>
                 <div class="flex warp gap-20 padding-top-50 min-h1 width-100 jc-content-between">
-                    <div class="border width-30">1</div>
-                    <div class="border width-30">2</div>
-                    <div class="border width-30">3</div>
-                    <div class="border width-30">4</div>
-                    <div class="border width-30">5</div>
-                    <div class="border width-30">6</div>
+                    <div class=" width-30">
+                        <img src="./img/business-feature-switching-tools.png" alt="">
+                        <h2> Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-top-30 "> Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+                    <div class=" width-30">
+                        <img src="./img/business-feature-send-files-it.png" alt="">
+                        <h2> Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-top-30 "> Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+                    <div class=" width-30">
+                        <img src="./img/business-feature-coordinate-it.png"  alt="">
+                        <h2> Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-top-30 "> Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+                    <div class=" width-30">
+                        <img src="./img/business-feature-integrations-it.png" alt="">
+                        <h2> Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-top-30 "> Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+                    <div class=" width-30">
+                        <img src="./img/business-feature-multi-device.png" alt="">
+                        <h2> Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-top-30 "> Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
+                    <div class=" width-30">
+                        <img src="./img/business-feature-security.png" alt="">
+                        <h2> Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-top-30 "> Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                    </div>
                 </div>
                 <div class="font-size-2-4rem paddin-top-100">
-                    <h2> Piu di 500.000 teamuttilizzano <br>Dropbox Business</h2>
+                    <h2> Piu di 500.000 team utilizzano <br>Dropbox Business</h2>
                 </div>
-                <div class="paddin-top-100">
+                <div class="paddin-top-100 margin-bottom">
                     <a class="blue paddin-top-100" href="">
                         Scopri di piu sui nostri clienti
                     </a>
